apiパスをusersに変更/operationIdを使用してクライアントのschemaの名前をわかりやすくする
